--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'fanareas'
+name: 'fanareas_dev'
 version: '1.0.0'
 config-version: 2
 
@@ -19,7 +19,6 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-target-path: "target" 
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
